--- a/html/assets/css/NeftaCss.css
+++ b/html/assets/css/NeftaCss.css
@@ -44,4 +44,38 @@
     padding: 5px 10px;
     cursor: pointer;
 }
+.modal-fullscreen {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
+.modal-dialog-fullscreen {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+.modal-content-fullscreen {
+      height: 100%;
+      border: none;
+      border-radius: 0;
+    }
+.modal-content {
+      background-color: rgba(0, 0, 0, 0.85); /* Color de fondo oscuro con opacidad */
+      border: none;
+    }
+/* Estilos para la alerta personalizada */
+.custom-alert {
+    background-color: #4CAF50; /* Fondo verde */
+    color: #FFFFFF; /* Texto blanco */
+    border: 1px solid #45A049; /* Borde verde oscuro */
+    border-radius: 5px;
+}
 
+.custom-alert .modal-header {
+    border-bottom: 1px solid #45A049; /* Línea inferior del encabezado */
+}
+
+.custom-alert .btn-close {
+    color: #FFFFFF; /* Icono de cierre en blanco */
+}
