--- a/html/assets/css/NeftaCss.css
+++ b/html/assets/css/NeftaCss.css
@@ -79,3 +79,20 @@
 .custom-alert .btn-close {
     color: #FFFFFF; /* Icono de cierre en blanco */
 }
+.contenedor {
+    width: 28px; /* Establece el ancho deseado para el contenedor */
+    height: 28px; /* Establece la altura deseada para el contenedor */
+    position: relative; /* Asegura que la imagen se ajuste al contenedor */
+}
+
+.imagen-adaptable {
+    max-width: 100%; /* La imagen se ajustará al ancho del contenedor */
+    max-height: 100%; /* La imagen se ajustará a la altura del contenedor */
+    width: auto; /* La imagen mantiene su relación de aspecto original */
+    height: auto; /* La imagen mantiene su relación de aspecto original */
+    position: absolute; /* Permite que la imagen ocupe todo el espacio del contenedor */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
